apply overflow-x fix to WAButton div

--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,6 @@ ul.dev, ul.support, ul.software {
   color: white;
 }
 
-html, body {
+div#WAButton{
   overflow-x: hidden;
 }
